indentation; updating colors; version bump

--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
     "name": "boss",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "Automatically load balance asyncronous jobs across multiple processes in a round-robin fashion",
     "author": "Mashape <support@mashape.com>",
     "homepage":"http://www.mashape.com",
     "dependencies": {
-        "colors" : "0.6.0-1"
+        "colors": "1.0.3"
     },
     "private": false,
     "engines": {
         "node": ">= 0.8.11"
     },
-    "license" : "MIT",
-    "repository" : { 
-        "type" : "git", 
-		"url" : "https://github.com/Mashape/boss.js"
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+		"url": "https://github.com/Mashape/boss.js"
     },
-    "bugs" : {
-		"url" : "https://github.com/Mashape/boss.js/issues",
-		"email" : "support@mashape.com"
-    }
+    "bugs": {
+		"url": "https://github.com/Mashape/boss.js/issues",
+		"email": "support@mashape.com"
+    },
+    "main": "lib/boss.js"
 }
